<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.samson.plan.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl"
        android:textSize="30sp"
        android:background="#ffffff"
        android:id="@+id/titleButtonAdd"
        android:layout_marginTop="107dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_a_plan"
        android:textSize="30sp"
        android:id="@+id/titleTextView"
        android:layout_alignBottom="@+id/titleButtonAdd"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:background="#ffffff"
        android:textSize="30sp"
        android:id="@+id/titleButtonMin"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/titleButtonAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delete_a_plan"
        android:textSize="30sp"
        android:id="@+id/titleTextView2"
        android:layout_below="@+id/titleTextView"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_marginTop="31dp"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scrollViewTitle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/titleButtonMin">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTable">

        </TableLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/manage_plans"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textSize="40sp"/>

</RelativeLayout>
